--- a/task1/style.css
+++ b/task1/style.css
@@ -14,3 +14,16 @@
 body{
     background: #fff;
 }
+
+.container{
+    margin: 20px 0;
+}
+
+.box{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+
+
