--- a/task1/style.css
+++ b/task1/style.css
@@ -9,6 +9,7 @@
     list-style: none;
     text-decoration: none;
     font-family: 'Poppins' sans-serif;
+    overflow-x: hidden;
 }
 
 body{
@@ -26,4 +27,38 @@ body{
 }
 
 
+.custom-margin{
+    /* margin: 0 1rem; */
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
 
+
+.no-border{
+    border: none !important;
+    border: 1px solid red;
+}
+
+
+
+.red-txt{
+    font-size: 20px;
+    color:red;
+}
+
+.green-txt{
+    font-size: 20px;
+    color: green;
+}
+
+.green{
+    background-color: green !important;
+}
+
+.custom-input{
+    font-size: 20px;
+}
+
+.input-txt{
+    font-size: 24px;
+}
