appendChild(li) to listContainer

--- a/task1/style.css
+++ b/task1/style.css
@@ -53,6 +53,11 @@ i{
     color: green;
 }
 
+.form-control.checked{
+    color: #555;
+    text-decoration: line-through;
+}
+
 .green{
     background-color: green !important;
 }
