--- a/task1/login.css
+++ b/task1/login.css
@@ -1,4 +1,4 @@
-/* .divider:after,
+.divider:after,
 .divider:before {
 content: "";
 flex: 1;
@@ -12,4 +12,9 @@ height: calc(100% - 73px);
 .h-custom {
 height: 100%;
 }
-} */
+}
+
+
+body{
+    width: 100%;
+}
