--- a/task1/style.css
+++ b/task1/style.css
@@ -1,125 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@300&family=Open+Sans&family=Poppins:wght@200;300;400;500;600;700;900&display=swap');
-
-*,
-*::after,
-*::before{
+*{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    list-style: none;
-    text-decoration: none;
-    font-family: 'Poppins' sans-serif;
-    border: none;
-    /* overflow-x: hidden; */
 }
-
-:root{
-    --primary-color:#FFF8DC ;
-    --secondary-color: #EEEEE6 ;
-    --tertiary-color:#000;
-}
-
-.dark-theme{
-    --primary-color:#252528;
-    --secondary-color:#575757;
-    --tertiary-color:#fff;
-}
-
-body{
-    background-color: var(--primary-color) !important;
-}
-
-.bg-color{
-    background-color: var(--secondary-color);
-}
-
-.custom-color{
-    color: var(--tertiary-color) !important;
-    font-size: larger;
-    font-weight: bold;
-}
-
-  .navbar-toggler-icon.custom-icon-color{
-    color: var(--tertiary-color) !important;
-}
-
-#darkmode{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    font-size: 20px;
-}
-
-/* .navbar-toggler.custom-color .navbar-toggler-icon {
-    color: #fff; 
-  } */
-
-.container{
-    margin: 20px 0;
-}
-
-.box{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-
-.custom-margin{
-    /* margin: 0 1rem; */
-    margin-left: 1rem;
-    margin-right: 1rem;
-}
-
-
-
-.no-border{
-    border: none !important;
-    border: 1px solid red;
-}
-
-i{
-    cursor: pointer;
-    /* width: 40px;
-    height: 40px; */
-    /* font-size: 22px;
-    height: 40px;
-    border: 1px solid;
-    text-align: center;
-    line-height: 40px;
-    border-radius: 50%; */
-}
-
-i:hover{
-    background: #edeef0;   
-}
-
-.red-txt{
-    font-size: 20px;
-    color:red;
-}
-
-.green-txt{
-    font-size: 20px;
-    color: green;
-}
-
-.form-control.compelet{
-    color: #555;
-    text-decoration: line-through;
-}
-
-.green{
-    background-color: green !important;
-}
-
-.custom-input{
-    font-size: 20px;
-}
-
-.input-txt{
-    font-size: 24px;
-}
-
-
