--- a/task1/style.css
+++ b/task1/style.css
@@ -3,3 +3,62 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+body{
+    background-image: linear-gradient(to right, #43e97b 0%, #38f9d7 100%);
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100vh;   
+}
+
+.container{
+    text-align: center;
+    padding: 50px;
+    /* border: 1px solid black; */
+    background: rgba(244, 246, 246, 0.863);
+    color: darkcyan;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+}
+
+.heading{
+    font-size: 25px;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    margin-bottom: 20px;
+}
+
+.temperature-wrapper{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+label{
+    font-size: 20px;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
+
+input{
+    width: 230px;
+    padding: 10px;
+    margin: 15px 0px;
+    outline: none;
+    background: rgba(198, 194, 194, 0.3);
+    border-color: rgba(255, 255, 255, 0.5);
+    border-radius: 10px 5px;
+    font-size: 17px;
+}
+
+input::placeholder{
+    color: darkgrey;
+    font-size: 15px;
+    text-align: center;
+}
